<?xml version="1.0"?>
<package format="2">
  <name>lidar_lane_detection</name>
  <version>0.0.0</version>
  <description>Lane detection using LiDAR point cloud</description>
  <maintainer email="you@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>Eigen</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>Eigen</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

</package>